[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scenes/players/player_2d.gd" type="Script" id=2]
[ext_resource path="res://scenes/bullets/player_bullet.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25, 25 )

[node name="Player2D" type="KinematicBody2D"]
script = ExtResource( 2 )
speed = 200.0
acceleration = 400.0
friction = 400.0
gravity = 1000.0
jump_force = 400.0
max_health = 10.0
bullet = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="FireTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="area_exited" from="Hitbox" to="." method="_on_Hitbox_area_exited"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
